fix: alignment of elements

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -19,19 +19,22 @@
 .experimentContainer {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  height: 400px;
+
+  height: 300px;
+}
+.sliderContainer {
+  display: flex;
+  transform: translatex(-60px);
 }
 
 .slider {
-  width: 400px;
-  height: 100px;
+  width: 300px;
   transform: rotate(-90deg);
 }
 
 .glass {
-  height: 400px;
-  width: 175px;
+  height: 300px;
+  width: 150px;
   border: 2px solid black;
   border-top: none;
   display: flex;
